@@ -67,6 +67,8 @@ void n0sdos_send_byte(uint8_t byte);
 
 uint8_t ultraboot_send_byte(uint8_t byte);
 
+void hypraload_send_byte(uint8_t byte);
+
 typedef enum { PARALLEL_DIR_IN = 0,
                PARALLEL_DIR_OUT } parallel_dir_t;
 
